--- a/src/__index.html
+++ b/src/__index.html
@@ -7,6 +7,31 @@
 	"mainNavItemActive": "Главная"
 })
 <!--HEADER end-->
+
+<!--TOP PANEL-->
+@@include('_layout_top-panel.tpl')
+<!--TOP PANEL end-->
+
+<!--scroll nav-->
+<ul class="scroll-nav scroll-nav-js">
+	<li data-menuanchor="firstPage" class="active">
+		<a href="#firstPage">Введение
+			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+		</a>
+	</li>
+	<li data-menuanchor="secondPage">
+		<a href="#secondPage">Новости
+			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+		</a>
+	</li>
+	<li data-menuanchor="thirdPage">
+		<a href="#thirdPage">Контакты
+			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+		</a>
+	</li>
+</ul>
+<!--scroll nav end-->
+
 <!--MAIN-->
 <div class="main">
 	<div class="max-wrap layout">
@@ -14,28 +39,42 @@
 			<!--CONTENT-->
 			<div class="content-wrap">
 				<div class="content user-content">
-					<ul id="menu">
-						<li data-menuanchor="firstPage" class="active"><a href="#firstPage">First section</a></li>
-						<li data-menuanchor="secondPage"><a href="#secondPage">Second section</a></li>
-						<li data-menuanchor="thirdPage"><a href="#thirdPage">Third section</a></li>
-					</ul>
-					<div id="fullpage">
-						<section class="section" id="firstPage">
-							<div class="section__title"><h2>Заголовок секции 1</h2></div>
-							<div class="section__holder">
-								Контент секции
+					<div class="main-sections main-sections-js">
+						<section class="main-section main-section--entry active" id="firstPage1" data-anchor="firstPage">
+							<div class="main-section__align">
+								<div class="main-section__title"><h2>Электромонтажное оборудование</h2></div>
+								<div class="main-section__holder">
+									<div class="total-data">
+										<div class="total-data__item">
+											<div class="total-data__title">118 <span class="unit">тыс.</span></div>
+											<div class="total-data__text">номенклатурных позиций электрощитового оборудования</div>
+										</div>
+										<div class="total-data__item">
+											<div class="total-data__title">10</div>
+											<div class="total-data__text">Регионов поставки на территории России</div>
+										</div>
+										<div class="total-data__item">
+											<div class="total-data__title">1000</div>
+											<div class="total-data__text">Высококвалифицированных специалистов</div>
+										</div>
+									</div>
+								</div>
 							</div>
 						</section>
-						<section class="section" id="secondPage">
-							<div class="section__title"><h2>Заголовок секции 2</h2></div>
-							<div class="section__holder">
-								Контент секции
+						<section class="main-section" id="secondPage2" data-anchor="secondPage">
+							<div class="main-section__align">
+								<div class="main-section__title"><h2>Заголовок секции 2</h2></div>
+								<div class="main-section__holder">
+									Контент секции
+								</div>
 							</div>
 						</section>
-						<section class="section" id="thirdPage">
-							<div class="section__title"><h2>Заголовок секции 3</h2></div>
-							<div class="section__holder">
-								Контент секции
+						<section class="main-section" id="thirdPage2" data-anchor="thirdPage">
+							<div class="main-section__align">
+								<div class="main-section__title"><h2>Заголовок секции 3</h2></div>
+								<div class="main-section__holder">
+									Контент секции
+								</div>
 							</div>
 						</section>
 					</div>
