--- a/src/index.html
+++ b/src/index.html
@@ -41,137 +41,202 @@
 	<!-- >>> head.tpl END <<< -->
 	<!--HEADER-->
 	<header class="header">
-		<div class="max-wrap layout">
-			<div class="header__holder">
-				<!--logo-->
-				<strong class="logo"><a href="index.html">Project Name</a><img style="display: none;" src="img/logo.png" alt="Project Name"></strong>
-				<!--logo end-->
-				<!--navigation-->
-				<div class="nav-wrap">
-					<nav class="nav">
-						<ul class="nav__list nav-js">
-							<!--(1) START @@key FIRST level-->
-							<li class="has-drop">
+		<div class="header__holder">
+			<div class="header__row">
+				<div class="header__cell">
+					<strong class="logo"><a href="index.html">ДВЭМЗ</a><img style="display: none;" src="img/logo.png" alt="Project Name"></strong>
+				</div>
+			</div>
+			<div class="header__row">
+				<div class="header__cell">
+					<div class="user-options">
+						<a href="#" class="user-option__item">
+							<div class="user-option__icon">
+								<span>Текст</span>
+								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+							</div>
+						</a>
+						<a href="#" class="user-option__item">
+							<div class="user-option__icon">
+								<span>Текст</span>
+								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+							</div>
+						</a>
+						<a href="#" class="user-option__item">
+							<div class="user-option__icon">
+								<span>Текст</span>
+								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+							</div>
+						</a>
+						<a href="#" class="user-option__item">
+							<div class="user-option__icon">
+								<div class="basket-counter">1</div>
+								<span>Текст</span>
+								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="header__row">
+				<div class="header__cell">
+					<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+				</div>
+			</div>
+		</div>
+	</header>
+	<!--NAVIGATION-->
+	<div class="nav-wrap">
+		<nav class="nav">
+			<ul class="nav__list nav-js">
+				<!--(1) START @@key FIRST level-->
+				<li class="has-drop">
+					<div class="nav__tab">
+						<a href="typography.html" title="nav - Пункт 1"><span>Пункт 1</span></a>
+						<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
+					</div>
+					<!--(2) START nav SECOND level-->
+					<div class="nav__drop nav-drop-js">
+						<ul class="sub-nav__list">
+							<li>
 								<div class="nav__tab">
-									<a href="typography.html" title="nav - Пункт 1"><span>Пункт 1</span></a>
+									<a href="#" title="nav - Пункт 1.1"><span>Пункт 1.1</span></a>
 									<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 								</div>
-								<!--(2) START nav SECOND level-->
+							</li>
+							<li class="has-drop">
+								<div class="nav__tab">
+									<a href="#" title="nav - Пункт 1.2 (есть подпункты)"><span>Пункт 1.2 (есть подпункты)</span></a>
+									<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
+								</div>
+								<!--(3) START nav THIRD level-->
 								<div class="nav__drop nav-drop-js">
 									<ul class="sub-nav__list">
 										<li>
 											<div class="nav__tab">
-												<a href="#" title="nav - Пункт 1.1"><span>Пункт 1.1</span></a>
+												<a href="#" title="nav - Пункт 1.2.1"><span>Пункт 1.2.1</span></a>
 												<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 											</div>
 										</li>
 										<li class="has-drop">
 											<div class="nav__tab">
-												<a href="#" title="nav - Пункт 1.2 (есть подпункты)"><span>Пункт 1.2 (есть подпункты)</span></a>
+												<a href="#" title="nav - Пункт 1.2.2 (есть подпункты)"><span>Пункт 1.2.2 (есть подпункты)</span></a>
 												<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 											</div>
-											<!--(3) START nav THIRD level-->
+											<!--(4) START nav FOURTH level-->
 											<div class="nav__drop nav-drop-js">
 												<ul class="sub-nav__list">
 													<li>
 														<div class="nav__tab">
-															<a href="#" title="nav - Пункт 1.2.1"><span>Пункт 1.2.1</span></a>
-															<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
-														</div>
-													</li>
-													<li class="has-drop">
-														<div class="nav__tab">
-															<a href="#" title="nav - Пункт 1.2.2 (есть подпункты)"><span>Пункт 1.2.2 (есть подпункты)</span></a>
-															<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
-														</div>
-														<!--(4) START nav FOURTH level-->
-														<div class="nav__drop nav-drop-js">
-															<ul class="sub-nav__list">
-																<li>
-																	<div class="nav__tab">
-																		<a href="#" title="nav - Пункт 1.2.2.1"><span>Пункт 1.2.2.1</span></a>
-																		<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
-																	</div>
-																</li>
-																<li>
-																	<div class="nav__tab">
-																		<a href="#" title="nav - Пункт 1.2.2.2"><span>Пункт 1.2.2.2</span></a>
-																		<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
-																	</div>
-																</li>
-																<li>
-																	<div class="nav__tab">
-																		<a href="#" title="nav - Пункт 1.2.2.3"><span>Пункт 1.2.2.3</span></a>
-																		<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
-																	</div>
-																</li>
-																<li>
-																	<div class="nav__tab">
-																		<a href="#" title="nav - Пункт 1.2.2.3"><span>Пункт 1.2.2.3</span></a>
-																		<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
-																	</div>
-																</li>
-															</ul>
-														</div>
-														<!--(4) END nav FOURTH level-->
-													</li>
-													<li>
-														<div class="nav__tab">
-															<a href="#" title="nav - Пункт 1.2.3"><span>Пункт 1.2.3</span></a>
+															<a href="#" title="nav - Пункт 1.2.2.1"><span>Пункт 1.2.2.1</span></a>
 															<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 														</div>
 													</li>
 													<li>
 														<div class="nav__tab">
-															<a href="#" title="nav - Пункт 1.2.4"><span>Пункт 1.2.4</span></a>
+															<a href="#" title="nav - Пункт 1.2.2.2"><span>Пункт 1.2.2.2</span></a>
+															<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
+														</div>
+													</li>
+													<li>
+														<div class="nav__tab">
+															<a href="#" title="nav - Пункт 1.2.2.3"><span>Пункт 1.2.2.3</span></a>
+															<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
+														</div>
+													</li>
+													<li>
+														<div class="nav__tab">
+															<a href="#" title="nav - Пункт 1.2.2.3"><span>Пункт 1.2.2.3</span></a>
 															<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 														</div>
 													</li>
 												</ul>
 											</div>
-											<!--(3) END nav THIRD level-->
+											<!--(4) END nav FOURTH level-->
 										</li>
 										<li>
 											<div class="nav__tab">
-												<a href="#" title="nav - Пункт 1.4"><span>Пункт 1.4</span></a>
+												<a href="#" title="nav - Пункт 1.2.3"><span>Пункт 1.2.3</span></a>
 												<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 											</div>
 										</li>
 										<li>
 											<div class="nav__tab">
-												<a href="#" title="nav - Пункт 1.5"><span>Пункт 1.5</span></a>
+												<a href="#" title="nav - Пункт 1.2.4"><span>Пункт 1.2.4</span></a>
 												<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 											</div>
 										</li>
 									</ul>
 								</div>
-								<!--(2) END nav SECOND level-->
+								<!--(3) END nav THIRD level-->
 							</li>
-							<!--(1) END @@key FIRST level-->
-							<!--(1) START @@key FIRST level-->
-							<li class="">
+							<li>
 								<div class="nav__tab">
-									<a href="#" title="nav - Пункт 2"><span>Пункт 2</span></a>
+									<a href="#" title="nav - Пункт 1.4"><span>Пункт 1.4</span></a>
 									<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 								</div>
 							</li>
-							<!--(1) END @@key FIRST level-->
-							<!--(1) START @@key FIRST level-->
-							<li class="">
+							<li>
 								<div class="nav__tab">
-									<a href="#" title="nav - Пункт 3"><span>Пункт 3</span></a>
+									<a href="#" title="nav - Пункт 1.5"><span>Пункт 1.5</span></a>
 									<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 								</div>
 							</li>
-							<!--(1) END @@key FIRST level-->
 						</ul>
-					</nav>
-				</div>
-				<!--navigation end-->
-			</div>
-		</div>
-	</header>
+					</div>
+					<!--(2) END nav SECOND level-->
+				</li>
+				<!--(1) END @@key FIRST level-->
+				<!--(1) START @@key FIRST level-->
+				<li class="">
+					<div class="nav__tab">
+						<a href="#" title="nav - Пункт 2"><span>Пункт 2</span></a>
+						<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
+					</div>
+				</li>
+				<!--(1) END @@key FIRST level-->
+				<!--(1) START @@key FIRST level-->
+				<li class="">
+					<div class="nav__tab">
+						<a href="#" title="nav - Пункт 3"><span>Пункт 3</span></a>
+						<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
+					</div>
+				</li>
+				<!--(1) END @@key FIRST level-->
+			</ul>
+		</nav>
+	</div>
+	<!--NAVIGATION end-->
 	<!--HEADER end-->
+	<!--TOP PANEL-->
+	<aside class="top-panel">
+		<div class="top-panel__widget">
+			<a href="tel:+7 (423) 230-20-13">+7 (423) 230-20-13</a>
+		</div>
+		<div class="top-panel__widget">
+			<a href="mailto:dvemz@gmail.com">dvemz@gmail.com</a>
+		</div>
+	</aside>
+	<!--TOP PANEL end-->
+	<!--scroll nav-->
+	<ul class="scroll-nav scroll-nav-js">
+		<li data-menuanchor="firstPage" class="active">
+			<a href="#firstPage">Введение
+			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+		</a>
+		</li>
+		<li data-menuanchor="secondPage">
+			<a href="#secondPage">Новости
+			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+		</a>
+		</li>
+		<li data-menuanchor="thirdPage">
+			<a href="#thirdPage">Контакты
+			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+		</a>
+		</li>
+	</ul>
+	<!--scroll nav end-->
 	<!--MAIN-->
 	<div class="main">
 		<div class="max-wrap layout">
@@ -179,34 +244,48 @@
 				<!--CONTENT-->
 				<div class="content-wrap">
 					<div class="content user-content">
-						<ul id="menu">
-							<li data-menuanchor="firstPage" class="active"><a href="#firstPage">First section</a></li>
-							<li data-menuanchor="secondPage"><a href="#secondPage">Second section</a></li>
-							<li data-menuanchor="thirdPage"><a href="#thirdPage">Third section</a></li>
-						</ul>
-						<div id="fullpage">
-							<section class="section" id="firstPage">
-								<div class="section__title">
-									<h2>Заголовок секции 1</h2>
-								</div>
-								<div class="section__holder">
-									Контент секции
+						<div class="main-sections main-sections-js">
+							<section class="main-section main-section--entry active" id="firstPage1" data-anchor="firstPage">
+								<div class="main-section__align">
+									<div class="main-section__title">
+										<h2>Электромонтажное оборудование</h2>
+									</div>
+									<div class="main-section__holder">
+										<div class="total-data">
+											<div class="total-data__item">
+												<div class="total-data__title">118 <span class="unit">тыс.</span></div>
+												<div class="total-data__text">номенклатурных позиций электрощитового оборудования</div>
+											</div>
+											<div class="total-data__item">
+												<div class="total-data__title">10</div>
+												<div class="total-data__text">Регионов поставки на территории России</div>
+											</div>
+											<div class="total-data__item">
+												<div class="total-data__title">1000</div>
+												<div class="total-data__text">Высококвалифицированных специалистов</div>
+											</div>
+										</div>
+									</div>
 								</div>
 							</section>
-							<section class="section" id="secondPage">
-								<div class="section__title">
-									<h2>Заголовок секции 2</h2>
-								</div>
-								<div class="section__holder">
-									Контент секции
+							<section class="main-section" id="secondPage2" data-anchor="secondPage">
+								<div class="main-section__align">
+									<div class="main-section__title">
+										<h2>Заголовок секции 2</h2>
+									</div>
+									<div class="main-section__holder">
+										Контент секции
+									</div>
 								</div>
 							</section>
-							<section class="section" id="thirdPage">
-								<div class="section__title">
-									<h2>Заголовок секции 3</h2>
-								</div>
-								<div class="section__holder">
-									Контент секции
+							<section class="main-section" id="thirdPage2" data-anchor="thirdPage">
+								<div class="main-section__align">
+									<div class="main-section__title">
+										<h2>Заголовок секции 3</h2>
+									</div>
+									<div class="main-section__holder">
+										Контент секции
+									</div>
 								</div>
 							</section>
 						</div>
@@ -216,13 +295,29 @@
 				<!--SIDEBAR-->
 				<aside class="sidebar">
 					<div class="sidebar__holder">
-						<div class="sidebar__widget">
-							<h3>Заголовок виджета</h3>
-							<p>Контент виджета</p>
+						<div class="sidebar__row">
+							<a href="#" class="sidebar__cell">
+								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+								<strong>Электрощитовое оборудование</strong>
+							</a>
 						</div>
-						<div class="sidebar__widget">
-							<h3>Заголовок виджета</h3>
-							<p>Контент виджета</p>
+						<div class="sidebar__row">
+							<a href="#" class="sidebar__cell">
+								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+								<strong>Трансформаторы ТМГ</strong>
+							</a>
+						</div>
+						<div class="sidebar__row">
+							<a href="#" class="sidebar__cell">
+								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+								<strong>Высоковольтное оборудование</strong>
+							</a>
+						</div>
+						<div class="sidebar__row">
+							<a href="files/pdf-test.pdf" class="sidebar__cell download">
+								<div class="download__icon">PDF</div>
+								<div class="download__title">Каталог продукции <span>Скачать .pdf</span></div>
+							</a>
 						</div>
 					</div>
 				</aside>
