--- a/src/__index.html
+++ b/src/__index.html
@@ -61,11 +61,18 @@
 								</div>
 							</div>
 						</section>
-						<section class="main-section" id="secondPage2" data-anchor="secondPage">
+						<section class="main-section main-section--news" id="secondPage2" data-anchor="secondPage">
 							<div class="main-section__align">
-								<div class="main-section__title"><h2>Заголовок секции 2</h2></div>
+								<div class="main-section__title"><h2>Новости</h2></div>
 								<div class="main-section__holder">
-									Контент секции
+									<div class="news-grid news-grid--home">
+										<div class="news-grid__list">
+											@@loop('_news-grid-item.tpl', 'includes-json/news-grid-items-others.json')
+										</div>
+									</div>
+									<div class="main-section__footer">
+										<a href="#" class="btn-more"><span>Все новости</span></a>
+									</div>
 								</div>
 							</div>
 						</section>
@@ -73,9 +80,27 @@
 							<div class="main-section__align">
 								<div class="main-section__title"><h2>Заголовок секции 3</h2></div>
 								<div class="main-section__holder">
-									Контент секции
+
 								</div>
 							</div>
+							<!--main map-->
+							<script>
+								var mainMapObjects = [
+									[
+										{lat: 43.10692, lng: 131.95718}, //coordinates of marker
+										'img/map-pin.png', //image pin
+										{
+											title: 'ДВЭМЗ',
+											address: '<b>Адрес</b> <div>г. Владивосток, ул. Молодежная, строение 1, корп. 3</div>',
+											phone: '<b>Тел.</b> <div><a href="tel:+7 423 588-59-74">+7 423 588-59-74</a></div>',
+											fax: '<b>Факс</b> <div>(423) 254 48 86</div>',
+											mail: '<b>Эл. почта</b> <div><a href="mailto:dvemz@gmail.com">dvemz@gmail.com</a></div>'
+										}
+									]
+								];
+							</script>
+							<div class="main-map" id="main-map" data-center-lat="43.1130142" data-center-lng="131.93352699" data-zoom="14"></div>
+							<!--main map end-->
 						</section>
 					</div>
 				</div>
