--- a/src/404.html
+++ b/src/404.html
@@ -155,28 +155,34 @@
 					</div>
 					<!--CONTENT end-->
 					<!--SIDEBAR-->
-					<aside class="sidebar">
-						<div class="sidebar__holder">
-							<div class="sidebar__row">
-								<a href="#" class="sidebar__cell">
-									<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
-									<strong>Электрощитовое оборудование</strong>
+					<aside class="side-menu">
+						<div class="side-menu__holder">
+							<div class="side-menu__row">
+								<a href="#" class="side-menu__cell">
+									<div class="side-menu__figure">
+										<img src="img/img-menu-01.png" alt="Электрощитовое оборудование" />
+									</div>
+									<strong class="side-menu__title">Электрощитовое оборудование</strong>
 								</a>
 							</div>
-							<div class="sidebar__row">
-								<a href="#" class="sidebar__cell">
-									<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
-									<strong>Трансформаторы ТМГ</strong>
+							<div class="side-menu__row">
+								<a href="#" class="side-menu__cell">
+									<div class="side-menu__figure">
+										<img src="img/img-menu-02.png" alt="Трансформаторы ТМГ" />
+									</div>
+									<strong class="side-menu__title">Трансформаторы ТМГ</strong>
 								</a>
 							</div>
-							<div class="sidebar__row">
-								<a href="#" class="sidebar__cell">
-									<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
-									<strong>Высоковольтное оборудование</strong>
+							<div class="side-menu__row">
+								<a href="#" class="side-menu__cell">
+									<div class="side-menu__figure">
+										<img src="img/img-menu-03.png" alt="Высоковольтное оборудование" />
+									</div>
+									<strong class="side-menu__title">Высоковольтное оборудование</strong>
 								</a>
 							</div>
-							<div class="sidebar__row">
-								<a href="files/pdf-test.pdf" class="sidebar__cell download">
+							<div class="side-menu__row">
+								<a href="files/pdf-test.pdf" class="side-menu__cell download">
 									<div class="download__icon">PDF</div>
 									<div class="download__title">Каталог продукции <span>Скачать .pdf</span></div>
 								</a>
