--- a/src/__index.html
+++ b/src/__index.html
@@ -14,19 +14,19 @@
 
 <!--scroll nav-->
 <ul class="scroll-nav scroll-nav-js">
-	<li data-menuanchor="firstPage" class="active">
-		<a href="#firstPage">Введение
-			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+	<li data-menuanchor="mainSectionEntry" class="active">
+		<a href="#mainSectionEntry">Введение
+			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="237.3 86.3 480.7 415.3" enable-background="new 237.3 86.3 480.7 415.3"> <path d="M631.7,478.3h-91v-147h-126v147h-91V291.7h-23.3v210H438v-147h79.3v147H655v-210h-23.3V478.3z M477.7,86.3L237.3,273  l14,18.7l226.3-177.3L704,291.7l14-18.7L477.7,86.3z"></path> </svg>
 		</a>
 	</li>
-	<li data-menuanchor="secondPage">
-		<a href="#secondPage">Новости
-			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+	<li data-menuanchor="mainSectionNews">
+		<a href="#mainSectionNews">Новости
+			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="260.7 35 431.7 490" enable-background="new 260.7 35 431.7 490"> <g id="Layer_3"> <path d="M340,340.7h179.7v-23.3H340V340.7z M594.3,105V35H260.7v420h98v70h333.7V105H594.3z M284,429.3V56h287v373.3H284z    M669,501.7H379.7V455h214.7V128.3H669V501.7z M340,247.3h179.7V224H340V247.3z M340,154h179.7v-23.3H340V154z"></path> </g> </svg>
 		</a>
 	</li>
-	<li data-menuanchor="thirdPage">
-		<a href="#thirdPage">Контакты
-			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+	<li data-menuanchor="mainSectionContacts">
+		<a href="#mainSectionContacts">Контакты
+			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="309.7 35 350 478.3" enable-background="new 309.7 35 350 478.3"> <g id="Layer_2"> <path d="M484.7,35c-95.7,0-175,77-175,175c0,30.3,6.1,58.1,20.1,83.7l154.9,219.6L627,312.7c21-30.3,32.7-65.3,32.7-102.7   C662,112,582.7,35,484.7,35z M608.3,298.7L484.7,471.3L372.7,315l0,0l-14-18.7c-16.3-25.7-25.7-56-25.7-86.3   c0-84,67.7-151.7,151.7-151.7S636.3,126,636.3,210C638.7,242.7,627,273,608.3,298.7z M484.7,137.7c-39.7,0-70,32.7-70,70   c0,39.7,32.7,70,70,70s70-32.7,70-70C557,170.3,524.3,137.7,484.7,137.7z M484.7,256.7c-25.7,0-46.7-21-46.7-46.7   s21-46.7,46.7-46.7s46.7,21,46.7,46.7C531.3,235.7,510.3,256.7,484.7,256.7z"></path> </g> </svg>
 		</a>
 	</li>
 </ul>
@@ -40,92 +40,102 @@
 			<div class="content-wrap">
 				<div class="content user-content">
 					<div class="main-sections main-sections-js">
-						<section class="main-section main-section--entry active" data-anchor="firstPage">
-							<div class="main-section__align">
+						<section class="main-section main-section--entry active" data-anchor="mainSectionEntry">
+							<div class="main-section__container">
+								<div class="main-section__align">
+									<div class="main-section__layout">
+										<div class="main-section__title"><h2>Дальневосточный электромонтажный завод</h2></div>
+									</div>
+								</div>
+							</div>
+							<div class="total-data">
 								<div class="main-section__layout">
-									<div class="main-section__title"><h2>Дальневосточный электромонтажный завод</h2></div>
-									<div class="main-section__holder">
-										<div class="total-data">
-											<div class="total-data__item">
-												<div class="total-data__title"><span class="prefix">от</span>3-х<span class="unit">дней</span></div>
-												<div class="total-data__text">Срок изготовления оборудования по Вашему заказа</div>
-											</div>
-											<div class="total-data__item">
-												<div class="total-data__title"><span class="prefix">до</span>7000</div>
-												<div class="total-data__text">Вариантов исполнения электрощитового оборудования</div>
-											</div>
-											<div class="total-data__item">
-												<div class="total-data__title"><span class="prefix">от</span>180<span class="unit">минут</span></div>
-												<div class="total-data__text">Срок отработки вашего заказа</div>
-											</div>
+									<div class="total-data__list">
+										<div class="total-data__item">
+											<div class="total-data__title">
+												<span class="prefix">от</span>3-х<span class="unit">дней</span></div>
+											<div class="total-data__text">Срок изготовления оборудования по Вашему заказа</div>
+										</div>
+										<div class="total-data__item">
+											<div class="total-data__title"><span class="prefix">до</span>7000</div>
+											<div class="total-data__text">Вариантов исполнения электрощитового оборудования</div>
+										</div>
+										<div class="total-data__item">
+											<div class="total-data__title">
+												<span class="prefix">от</span>180<span class="unit">минут</span></div>
+											<div class="total-data__text">Срок отработки вашего заказа</div>
 										</div>
 									</div>
 								</div>
 							</div>
 						</section>
-						<section class="main-section main-section--news" data-anchor="secondPage">
-							<div class="main-section__align">
-								<div class="main-section__layout">
-									<div class="main-section__title"><h2>Новости</h2></div>
-									<div class="main-section__holder">
-										<div class="news-grid news-grid--home">
-											<div class="news-grid__list">
-												@@loop('_news-grid-item.tpl', 'includes-json/news-grid-items-others.json')
-											</div>
-										</div>
-										<div class="main-section__footer">
-											<a href="#" class="btn-main--more"><span>Все новости</span></a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</section>
-						<section class="main-section main-section--map" data-anchor="thirdPage">
-							<div class="main-section__align">
-								<div class="main-section__layout">
-									<div class="main-section__pos">
-										<div class="main-section__title"><h2>Контакты</h2></div>
+						<section class="main-section main-section--news" data-anchor="mainSectionNews">
+							<div class="main-section__container">
+								<div class="main-section__align">
+									<div class="main-section__layout">
+										<div class="main-section__title"><h2>Новости</h2></div>
 										<div class="main-section__holder">
-											<div class="phone">+7 423 588-59-74</div>
-											<div class="info">
-												<ul class="contacts">
-													<li>Факс: (423) 254 48 86</li>
-													<li>Эл. почта: <a href="mailto:dvemz@gmail.com">dvemz@gmail.com</a></li>
-												</ul>
-												<div class="adr">г. Владивосток, ул. Молодежная, строение 1, корп. 3</div>
+											<div class="news-grid news-grid--home">
+												<div class="news-grid__list">
+													@@loop('_news-grid-item.tpl', 'includes-json/news-grid-items-others.json')
+												</div>
 											</div>
-											<a href="#" class="btn-main">
-												<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
-												<span>Обратная связь</span>
-											</a>
+											<div class="main-section__footer">
+												<a href="#" class="btn-main--more"><span>Все новости</span></a>
+											</div>
 										</div>
 									</div>
 								</div>
-								<!--main map-->
-								<script>
-									var mainMapPosition = {
-										'desktop': {
-											'lat': 43.11329616,
-											'lng': 131.92525506,
-											'zoom': 14
-										}
-									};
-									var mainMapObjects = [
-										[
-											{lat: 43.10692, lng: 131.95718}, //coordinates of marker
-											'img/map-pin.png', //image pin
-											{
-												title: 'ДВЭМЗ',
-												address: '<b>Адрес</b> <div>г. Владивосток, ул. Молодежная, строение 1, корп. 3</div>',
-												phone: '<b>Тел.</b> <div><a href="tel:+7 423 588-59-74">+7 423 588-59-74</a></div>',
-												fax: '<b>Факс</b> <div>(423) 254 48 86</div>',
-												mail: '<b>Эл. почта</b> <div><a href="mailto:dvemz@gmail.com">dvemz@gmail.com</a></div>'
+							</div>
+						</section>
+						<section class="main-section main-section--map" data-anchor="mainSectionContacts">
+							<div class="main-section__container">
+								<div class="main-section__align">
+									<div class="main-section__layout">
+										<div class="main-section__pos">
+											<div class="main-section__title"><h2>Контакты</h2></div>
+											<div class="main-section__holder">
+												<div class="phone">+7 423 588-59-74</div>
+												<div class="info">
+													<ul class="contacts">
+														<li>Факс: (423) 254 48 86</li>
+														<li>Эл. почта: <a href="mailto:dvemz@gmail.com">dvemz@gmail.com</a></li>
+													</ul>
+													<div class="adr">г. Владивосток, ул. Молодежная, строение 1, корп. 3</div>
+												</div>
+												<a href="#" class="btn-main">
+													<svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100"><path d="M5,5v90h90V5H5z M12.079,17.114l32.914,33.011L12.079,82.942V17.114z M17.057,12.08h66.095L50.006,45.127  L17.057,12.08z M49.991,55.139L82.677,87.92H17.113L49.991,55.139z M55.004,50.14L87.92,17.322v65.83L55.004,50.14z"></path></svg>
+													<span>Обратная связь</span>
+												</a>
+											</div>
+										</div>
+									</div>
+									<!--main map-->
+									<script>
+										var mainMapPosition = {
+											'desktop': {
+												'lat': 43.11329616,
+												'lng': 131.92525506,
+												'zoom': 14
 											}
-										]
-									];
-								</script>
-								<div class="main-map" id="main-map"></div>
-								<!--main map end-->
+										};
+										var mainMapObjects = [
+											[
+												{lat: 43.10692, lng: 131.95718}, //coordinates of marker
+												'img/map-pin.png', //image pin
+												{
+													title: 'ДВЭМЗ',
+													address: '<b>Адрес</b> <div>г. Владивосток, ул. Молодежная, строение 1, корп. 3</div>',
+													phone: '<b>Тел.</b> <div><a href="tel:+7 423 588-59-74">+7 423 588-59-74</a></div>',
+													fax: '<b>Факс</b> <div>(423) 254 48 86</div>',
+													mail: '<b>Эл. почта</b> <div><a href="mailto:dvemz@gmail.com">dvemz@gmail.com</a></div>'
+												}
+											]
+										];
+									</script>
+									<div class="main-map" id="main-map"></div>
+									<!--main map end-->
+								</div>
 							</div>
 						</section>
 					</div>
@@ -134,7 +144,7 @@
 			<!--CONTENT end-->
 
 			<!--SIDEBAR-->
-			@@include('_layout_sidebar.tpl')
+			@@include('_layout_side-menu.tpl')
 			<!--SIDEBAR-->
 		</div>
 	</div>
