--- a/src/__typography.html
+++ b/src/__typography.html
@@ -598,7 +598,7 @@
 				<!--CONTENT end-->
 
 				<!--SIDEBAR-->
-				@@include('_layout_sidebar.tpl')
+				@@include('_layout_side-menu.tpl')
 				<!--SIDEBAR-->
 			</div>
 		</div>
