--- a/src/__404.html
+++ b/src/__404.html
@@ -22,7 +22,7 @@
 				<!--CONTENT end-->
 
 				<!--SIDEBAR-->
-				@@include('_layout_sidebar.tpl')
+				@@include('_layout_side-menu.tpl')
 				<!--SIDEBAR-->
 			</div>
 		</div>
